fix logo alignment

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -13,7 +13,7 @@
 }
 
 header {
-  background-color: var(--secondary-color);
+  background-color: #5f99be;
   display: grid;
   grid-template-columns: 150px auto;
 
